emoji z-index fix / reload client button added to the desktop

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -270,7 +270,7 @@ body {
 
 #tippy-2,
 #tippy-1 {
-  z-index: 999 !important;
+  z-index: 9999 !important;
 }
 
 .hide-scrollbar::-webkit-scrollbar {
